design changes and security fix
